; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_BigNumToBuf.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_BigNumToBuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @BigNumToBuf(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %28

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @BN_num_bytes(i32* %11)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32* @ZeroMalloc(i32 %13)
  store i32* %14, i32** %5, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @BN_bn2bin(i32* %15, i32* %16)
  %18 = call i32* (...) @NewBuf()
  store i32* %18, i32** %6, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = load i32*, i32** %5, align 8
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @WriteBuf(i32* %19, i32* %20, i32 %21)
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @Free(i32* %23)
  %25 = load i32*, i32** %6, align 8
  %26 = call i32 @SeekBuf(i32* %25, i32 0, i32 0)
  %27 = load i32*, i32** %6, align 8
  store i32* %27, i32** %2, align 8
  br label %28

28:                                               ; preds = %10, %9
  %29 = load i32*, i32** %2, align 8
  ret i32* %29
}

declare dso_local i32 @BN_num_bytes(i32*) #1

declare dso_local i32* @ZeroMalloc(i32) #1

declare dso_local i32 @BN_bn2bin(i32*, i32*) #1

declare dso_local i32* @NewBuf(...) #1

declare dso_local i32 @WriteBuf(i32*, i32*, i32) #1

declare dso_local i32 @Free(i32*) #1

declare dso_local i32 @SeekBuf(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
